// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package remoting.protobufhttpclient;

message Status {
  int32 code = 1;
  string message = 2;
}

message StreamBody {
  repeated bytes messages = 1;
  Status status = 2;
  repeated bytes noop = 15;
}
